tests/snapshots/errors/pop_empty_array.mc
let v: Vec<int> = Vec<int>::`new`();
let x = v.pop();
print(x);
